[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/DarkJade.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Dark Jade/Dark Jade.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "baby",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 6.0

[node name="DarkJade" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 0.827395, 0.827395 )
shape = SubResource( 10 )

[node name="appearance" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "baby"
playing = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -1, 0 )
shape = SubResource( 11 )

[node name="immobolise_timer" type="Timer" parent="."]
one_shot = true

[node name="slow_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="immobolise_timer" to="." method="_on_immobolise_timer_timeout"]
[connection signal="timeout" from="slow_timer" to="." method="_on_slow_timer_timeout"]
